fixed library overlap issue

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -5,10 +5,12 @@
   width: 20rem;
   height: 100%;
   box-shadow: 2px 2px 50px gray;
+  border-radius: 1rem;
   overflow: scroll;
   transform: translateX(-100%);
   transition: all 0.5s ease;
   opacity: 0;
+  background-color: white;
   h2 {
     padding: 2rem;
   }
