--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -34,7 +34,7 @@
   .skip-back,
   .skip-forward,
   .play {
-    width: 15px;
+    width: 25px;
   }
 
   .icon-hidden {
